fix some spacing issues in controls container

--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+	Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;;
 }
 
 body {
@@ -28,16 +29,16 @@ body {
 	margin-top: 60px;
 	margin-left: 50px;
 	width: 372px;
+	height: auto;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	border: 6px solid black;
-	border-radius: 30px;
+	box-shadow: 4px 6px 8px black ;
+	border-radius: 10px;
 	background-color: white;
 }
 h2 {
-	display: flex;
-	justify-content: center;
+	text-align: center;
 	font-size: 30px;
 }
 .buttons {
@@ -54,8 +55,6 @@ button {
 	border: none;
 	background-color: black;
 	color: white;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 h4 {
@@ -68,15 +67,14 @@ h4 {
 #colour-controls {
 	display: flex;
 	justify-content: flex-start;
-	height: 70px;
+	margin: 12px 0 12px 12px;
+	width: 120px;
+	flex-wrap: wrap;
 }
 #colour-controls > * {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	color: white;
-	width: 60px;
-	height: 35px;
-	border-radius: 2px;
+	width: 40px;
+	height: 40px;	
+	border-radius: 0;
 }
 
 #colour-controls :nth-child(1) {
@@ -103,18 +101,7 @@ h4 {
 #colour-controls :nth-child(9) {
 	background-color: teal;
 }
-.rainbowButton {
-	display: flex;
-	justify-content: center;
-}
-.rainbowButton > button {
-	background-image: linear-gradient(to right, red, blue, green);
-	width: 70px;
-	color: black;
-	border-radius: 3px;
-	border: 1px solid black;
-	box-shadow: 2px 2px black;
-}
+
 
 #grid-container {
 	min-width: 481px;
